@@ -1,3 +1,11 @@
+2004-06-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b188
+
+	* Change: Minor optimization in Album->setHighlight()
+
+	* Change: Extra checking in AlbumItem->setHighlight() to 
+	  try and prevent issues with movies.  Upgrade/Movie error is
+	  still unreproduceable.
+
 2004-06-10 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b187
 
 	* New: Added Config option to allow everybody to see the comment overview, not only admins.
